# shapes

./: .gitignore  Cargo.toml
shapes-cpp/: CMakeLists.txt  conanfile.txt
shapes-cpp/include/shapes/: basic_shape.h  circle.h  consts.h  ellipse.h  rectangle.h  shape.h  shapes.h  square.h
shapes-cpp/scripts/: dependencies-x64-windows.cmd  dependencies.cmd  dependencies.sh  setup-vcpkg.cmd  vcpkg-init-windows.cmd  vcpkg-linux.md
shapes-cpp/src/: CMakeLists.txt  main.cpp  shapes.cpp
shapes-cpp/test/: CMakeLists.txt  circle_test.cpp  elipse_test.cpp  rectangle_test.cpp  square_test.cpp
shapes-cpp/tests/: CMakeLists.txt  circle_tests.cpp  elipse_tests.cpp  rectangle_tests.cpp  square_tests.cpp
shapes-rs/src/: main.rs
shapes-rs/src/shapes/: circle.rs  ellipse.rs  rectangle.rs  shape.rs  square.rs
src/: lib.rs
src/shapes/: circle.rs  ellipse.rs  mod.rs  rectangle.rs  square.rs
