cmake_minimum_required(VERSION 3.20)

set(CMAKE_TOOLCHAIN_FILE "${CMAKE_CURRENT_SOURCE_DIR}/vcpkg/scripts/buildsystems/vcpkg.cmake"
    CACHE STRING "Vcpkg toolchain file")

project(shapes VERSION 1.0.0 LANGUAGES CXX C)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(PROJECT_INCLUDE_DIRS "${CMAKE_SOURCE_DIR}/include")

find_package(fmt CONFIG REQUIRED)
find_package(GTest CONFIG REQUIRED)

add_subdirectory(src)
target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME} PUBLIC fmt::fmt)

add_subdirectory(test)

target_include_directories("${PROJECT_NAME}_lib" PUBLIC ${PROJECT_INCLUDE_DIRS})
target_link_libraries("${PROJECT_NAME}_lib" PUBLIC fmt::fmt)

target_link_libraries("${PROJECT_NAME}_test" PRIVATE GTest::gtest_main "${PROJECT_NAME}_lib")
